# BearTorrent-Final-Project

./: .gitignore  README.md
.devcontainer/: devcontainer.json
client/: Cargo.toml  build.rs  package.json  run.ps1  temp
client/.cargo/: config.toml
client/frontend/: package.json  tailwind.config.js
client/frontend/public/: index.html
client/frontend/src/: App.jsx  AppRoutes.jsx  index.css  index.jsx  main.jsx  modern-styles.css  shimmer.css  theme.js
client/frontend/src/components/: BrowseFileButton.jsx  ConnectToggle.jsx  FileDetailSidebar.jsx  FileRow.jsx  FileTable.jsx  PersonalFileDetailSidebar.jsx  ToggleButton.jsx  TopNavBar.jsx
client/frontend/src/controllers/: demoController.js
client/frontend/src/pages/: App.jsx  Files.jsx
client/src/: connection.rs  data_handler.rs  data_router.rs  demo.rs  file_assembler.rs  file_handler.rs  lib.rs  main.rs  message.rs  peer_connection.rs  piece_assembler.rs  quic_p2p_sender.rs  server_connection.rs  torrent_client.rs  turn_fallback.rs
client/src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.json  tauri.static.json
client/src-tauri/resources/cache/: Hello.txt.filecache  MatCaps.zip.info  New Text Document.txt.filecache
client/src-tauri/src/: demo.rs  main.rs
protos/: connection.proto
server/: Cargo.toml  Dockerfile  build.rs  cloud_build_script.sh  instructions.txt  orce  other.txt  redeploy_and_log.sh  service.yaml  skaffold.yaml
server/protos/: connection.proto
server/src/: connection.rs  main.rs  turn.rs
