[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.13.5"
rustls = "0.23.26"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.13.0", features = ["_tls-any", "tls-webpki-roots"] }
webpki-roots = "0.26.8"


[build-dependencies]
tonic-build = "0.13.0"
