[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
directories-next = "2.0.0"
prost = "0.13.5"
rcgen = "0.13.2"
rustls = "0.23.26"
stunclient = "0.4.1"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.13.0", features = ["_tls-any", "tls-webpki-roots"] }
webpki-roots = "0.26.8"


[build-dependencies]
tonic-build = "0.13.0"
