[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
directories-next = "2.0.0"
local-ip-address = "0.6.3"
prost = "0.13.5"
quinn = { version = "0.11.7", default-features = false, features = ["ring", "runtime-tokio", "rustls"] }
rcgen = "0.13.2"
rustls = "0.23.26"
stunclient = "0.4.1"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.17"
tokio-util = "0.7.15"
tonic = { version = "0.13.0", features = ["_tls-any", "tls-webpki-roots"] }
webpki-roots = "0.26.8"
sha1 = "0.10.6"


[build-dependencies]
tonic-build = "0.13.0"
