[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.13.5"
tonic = "0.13.0"
tokio = { version = "1.19.2", features = ["full"] }

# this is only for stubbed out main before we actually build server
warp = "0.3.7"
tonic-build = "0.13.0"
uuid = { version = "1.16.0", features = ["v4"] }
tokio-stream = "0.1.17"
dashmap = "6.1.0"

[build-dependencies]
tonic-build = "0.13.0"
